# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2021-04-17 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_http_cowboy for cowboy 2.x use based on
      cloudi_service_http_cowboy1 (and switch to using it)
    * Add cowboy, cowlib, ranch (recent versions)
      (minimum Erlang/OTP becomes 21.0)

2021-04-16 Michael Truog   <mjtruog at protonmail dot com>

    * Update jsx

2021-04-15 Michael Truog   <mjtruog at protonmail dot com>

    * Cause runtime failure in ranch1_ssl for Erlang/OTP >= 24
      due to ssl:ssl_accept/2 and ssl:cipher_suites/0 functions
      getting removed in Erlang/OTP
        * cloudi_service_http_cowboy1 ssl use will be broken
          in Erlang/OTP >= 24
    * Update hackney, certifi, idna, unicode_util_compat
    * Update exometer_core, hut, folsom, bear
    * Update epgsql
    * Update parse_trans
    * Update proper (minimum Erlang/OTP becomes 20.0)

2021-04-14 Michael Truog   <mjtruog at protonmail dot com>

    * Add the service configuration options
      aspects_suspend and aspects_resume for executing aspect functions
      when a service is suspended or resumed
    * Add cloudi_service_map_reduce functions
      aspect_suspend/1 and aspect_resume/1 for use with the
      aspects_suspend and aspects_resume service configuration options
      for suspending the map-reduce execution using the
      CloudI Service API services_suspend function
    * Fix configuration validation of {{_, _}} aspect function arity
    * Fix cloudi_core_i_os_port:sync/3 typespec use

2021-04-13 Michael Truog   <mjtruog at protonmail dot com>

    * Add CloudI Service API services_status process identifiers in
      pids_erlang and pids_os lists
    * Add cloudi_service_api_requests JSON support for
      services_status pids_erlang and pids_os data

2021-04-12 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_filesystem use_expires argument