@@ -91,6 +91,7 @@ t_client_basic_1(_Config) ->
     URLPath0 = <<"/ct_test_files/cloudi_service_http_client_SUITE.config">>,
     {{ok,
       [{<<"status">>, <<"200">>},
+       {<<"connection">>, <<"close">>},
        {<<"date">>, _},
        {<<"accept-ranges">>, <<"bytes">>},
        {<<"etag">>, _},
@@ -99,7 +100,7 @@ t_client_basic_1(_Config) ->
        {<<"content-type">>, <<"application/x-erlang">>},
        {<<"last-modified">>, _}],
       Response0},
-     _Context1} = cloudi_service_http_client:get(Context0,
+     Context1} = cloudi_service_http_client:get(Context0,
                                                 ?SERVICE_PREFIX1,
                                                 [{<<"host">>, Host},
                                                  {<<"url-path">>, URLPath0}],
@@ -107,26 +108,26 @@ t_client_basic_1(_Config) ->
     ConfigData = Response0,
     {ok, Config} = file:consult(CloudIConfigPath),
     {_, ServicesConfigIn} = lists:keyfind(services, 1, Config),
-% XXX test
-%    URLPath1 = <<"/cloudi/api/rpc/services.erl">>,
-%    {{ok,
-%      [{<<"status">>, <<"200">>},
-%       {<<"date">>, _},
-%       {<<"server">>, <<"Cowboy">>},
-%       {<<"content-length">>, ContentLength1},
-%       {<<"content-type">>, <<"application/x-erlang">>}],
-%      Response1},
-%     _} = cloudi_service_http_client:get(Context1,
-%                                         ?SERVICE_PREFIX1,
-%                                         [{<<"host">>, Host},
-%                                          {<<"url-path">>, URLPath1}],
-%                                         <<>>),
-%    true = (erlang:binary_to_integer(ContentLength1) ==
-%            erlang:byte_size(Response1)),
-%    ServicesConfigOut = [S ||
-%                         {_, S} <- cloudi_string:binary_to_term(Response1)],
+    URLPath1 = <<"/cloudi/api/rpc/services.erl">>,
+    {{ok,
+      [{<<"status">>, <<"200">>},
+       {<<"connection">>, <<"close">>},
+       {<<"date">>, _},
+       {<<"server">>, <<"Cowboy">>},
+       {<<"content-length">>, ContentLength1},
+       {<<"content-type">>, <<"application/x-erlang">>}],
+      Response1},
+     _} = cloudi_service_http_client:get(Context1,
+                                         ?SERVICE_PREFIX1,
+                                         [{<<"host">>, Host},
+                                          {<<"url-path">>, URLPath1}],
+                                         <<>>),
+    true = (erlang:binary_to_integer(ContentLength1) ==
+            erlang:byte_size(Response1)),
+    ServicesConfigOut = [S ||
+                         {_, S} <- cloudi_string:binary_to_term(Response1)],
     3 = erlang:length(ServicesConfigIn),
-%    4 = erlang:length(ServicesConfigOut),
+    4 = erlang:length(ServicesConfigOut),
     ok.
 
 %%%------------------------------------------------------------------------
